nav links alignment fixed

--- a/src/components/ExportCSV/ExportCSV.css
+++ b/src/components/ExportCSV/ExportCSV.css
@@ -2,3 +2,9 @@
     font-size: smaller;
     color: white;
 }
+
+@media screen and (max-device-width: 640px) {
+    .btn{
+        margin-top: 10px;
+    }
+}
